--- a/hypr/variables.conf
+++ b/hypr/variables.conf
@@ -2,13 +2,13 @@
 # Apps
 $terminal = foot
 $browser = zen-browser
-$editor = codium
+$editor = code
 $fileExplorer = thunar
 
 # Touchpad
 $touchpadDisableTyping = true
 $touchpadScrollFactor = 0.3
-$workspaceSwipeFingers = 4
+$workspaceSwipeFingers = 3
 $gestureFingers = 3
 $gestureFingersMore = 4
 
