--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -12,7 +12,7 @@ exec = mkdir -p $cConf && touch -a $cConf/hypr-vars.conf
 source = $cConf/hypr-vars.conf
 
 # Default monitor conf
-monitor = , preferred, auto, 1
+monitor = , 1920x1080@144, auto, 1
 
 # Configs
 source = $hl/env.conf
