--- a/hypr/hyprland/rules.conf
+++ b/hypr/hyprland/rules.conf
@@ -4,6 +4,11 @@ windowrule = opacity $windowOpacity override, fullscreen:0
 windowrule = opaque, class:foot|equibop|org\.quickshell|imv|swappy  # They use native transparency or we want them opaque
 windowrule = center 1, floating:1, xwayland:0  # Center all floating windows (not xwayland cause popups)
 
+# custom
+windowrulev2 = workspace 1,class:code
+windowrulev2 = workspace 2,class:zen
+windowrulev2 = workspace 3,class:com.obsproject.Studio
+
 # Float
 windowrule = float, class:guifetch  # FlafyDev/guifetch
 windowrule = float, class:yad
