--- a/hypr/hyprland/rules.conf
+++ b/hypr/hyprland/rules.conf
@@ -8,7 +8,7 @@ windowrule = center 1, floating:1, xwayland:0  # Center all floating windows (no
 windowrulev2 = workspace 1,class:code
 windowrulev2 = workspace 2,class:zen
 windowrulev2 = workspace 3,class:com.obsproject.Studio
-
+windowrulev2 = workspace 4,class:steam
 # Float
 windowrule = float, class:guifetch  # FlafyDev/guifetch
 windowrule = float, class:yad
