--- a/hypr/hyprland/general.conf
+++ b/hypr/hyprland/general.conf
@@ -1,7 +1,7 @@
 general {
     layout = dwindle
 
-    allow_tearing = false  # Allows `immediate` window rule to work
+    allow_tearing = true  # Allows `immediate` window rule to work
 
     gaps_workspaces = $workspaceGaps
     gaps_in = $windowGapsIn
