--- a/hypr/hyprland/rules.conf
+++ b/hypr/hyprland/rules.conf
@@ -5,6 +5,7 @@ windowrule = opaque, class:foot|equibop|org\.quickshell|imv|swappy  # They use n
 windowrule = center 1, floating:1, xwayland:0  # Center all floating windows (not xwayland cause popups)
 
 # custom
+windowrulev2 = workspace 1,class:^(foot)$
 windowrulev2 = workspace 1,class:^(code)$
 windowrulev2 = workspace 2,class:^(zen)$
 windowrulev2 = workspace 3,class:^(com.obsproject.Studio)$
