--- a/hypr/hyprland/input.conf
+++ b/hypr/hyprland/input.conf
@@ -3,7 +3,8 @@ input {
     numlock_by_default = false
     repeat_delay = 250
     repeat_rate = 35
-
+    accel_profile = flat
+    sensitivity = 0 
     focus_on_close = 1
 
     touchpad {
